[package]
name = "tracing_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tracing = { git = "https://github.com/tokio-rs/tracing", branch = "master" }
tracing = { git = "https://github.com/ldm0/tracing", branch = "ldm_inline_tweak" }